<resources>
    <string name="app_name">CebancPizza</string>
    <string name="nombre">Nombre</string>
    <string name="direccion">Dirrección</string>
    <string name="telefono">Tlf</string>
    <string name="siguiente">Siguiente</string>
    <string name="salir">Salir</string>
    <string name="mas">+</string>
    <string name="menos">-</string>
    <string name="seleccioneCantidad">Seleccione la cantidad del producto indicado:</string>
    <string name="anadir">Añadir</string>
    <string name="pvp">Total:</string>
    <string name="cancelar">Cancelar</string>
    <string name="resumen">Resumen del pedido:</string>
    <string name="aceptar">Aceptar</string>
    <string-array name="tipoMasa">
        <item>Masa Fina</item>
        <item>Masa Normal -> 1€ más</item>
    </string-array>
    <string-array name="tamano">
        <item>Individual</item>
        <item>Mediana -> 2€ más</item>
        <item>Familiar -> 5€ más</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="añadirP">Añadir +</string>
    <string name="bebidaSel">Escoja su bebida:</string>
    <string name="resPedido">Finalizar pedido</string>
    <string name="borradoCarrito">SU PEDIDO</string>
    <string name="pizzasPedido">Sus pizzas:</string>
    <string name="bebidasPedido">Sus bebidas:</string>
    <string name="btnLineaCompleta">Eliminar pizza</string>
    <string name="btnLineaCompletaB">ELIMINAR BEBIDA</string>
    <string name="atras">Volver</string>
    <string name="tot">Precio de tu pedido:</string>
    <string name="carbonara">Pizza Carbonara 10€</string>
    <string name="barbacoa">Pizza Barbacoa 10€</string>
    <string name="quesos">Pizza 4 Quesos 9€</string>
    <string name="vegetal">Pizza Vegetal 12€</string>
    <string name="tropical">Pizza Tropical 12€</string>
    <string name="tlf">Tlf contacto</string>
    <string name="cebanc">Berio Pasealekua, 50, 20018 Donostia, Gipuzkoa</string>
    <string name="cocacola">CocaCola 1,95€</string>
    <string name="limonsoda">Limon Soda 1,50€</string>
    <string name="fanta">Fanta 1,95€</string>
    <string name="nestea">Nestea 1,85€</string>
    <string name="cerveza">Cerveza 1,55€</string>
    <string name="agua">Agua 1,35€</string>
    <string name="clientes">Clientes</string>
    <string name="articulos">Artículos</string>
    <string name="pedidos">Pedidos</string>
    <string name="administrador">Pulse el botón de lo que desea administrar</string>
    <string name="modificar">Modificar</string>
    <string name="borrar">Borrar</string>
    <string name="login">Iniciar sesión</string>
    <string name="logout">Salir</string>
    <string name="mante">ADMIN</string>
    <string-array name="pizzas">
        <item>Carbonara</item>
        <item>Vegetal</item>
        <item>Barbacoa</item>
        <item>4Quesos</item>
        <item>Tropical</item>
    </string-array>
    <string-array name="bebidas">
        <item>Agua</item>
        <item>Cocacola</item>
        <item>KasNaranja</item>
        <item>Nestea</item>
        <item>Cerveza</item>
        <item>LimonSoda</item>
    </string-array>
</resources>
