<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/administrador"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:gravity="center"
        android:textSize="22sp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:layout_marginTop="20dp"/>

    <Button
        android:text="@string/clientes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnClientes"
        android:layout_marginTop="20dp"/>

    <Button
        android:text="@string/articulos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnArticulos"
        android:layout_marginTop="20dp"/>

    <Button
        android:text="@string/pedidos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnPedidos"
        android:layout_marginTop="20dp"/>

    <Button
        android:text="@string/salir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnSalir"
        android:layout_marginTop="20dp"/>
</LinearLayout>