<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/borradoCarrito"
        android:gravity="center"
        android:textSize="25dp"
        android:layout_marginBottom="15dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pizzasPedido"
        android:textSize="20dp"/>

    <Spinner
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spnPizzas"
        android:background="@android:color/white"
        android:layout_weight="0.01" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnLineaCompleta"
        android:id="@+id/eliminarPizza"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="25dp">

        <Button
            android:layout_width="192dp"
            android:layout_height="wrap_content"
            android:text="@string/mas"
            android:id="@+id/masPizza"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menos"
            android:id="@+id/menosPizza"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bebidasPedido"
        android:textSize="20dp"/>

    <Spinner
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spnBebidas"
        android:background="@android:color/white"
        android:layout_weight="0.01" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnLineaCompletaB"
        android:id="@+id/eliminarBebida"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="192dp"
            android:layout_height="wrap_content"
            android:text="@string/mas"
            android:id="@+id/masBebida"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menos"
            android:id="@+id/menosBebida"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/tot"
        android:textAlignment="center"
        android:layout_marginBottom="15dp"
        android:textSize="20dp"
        android:id="@+id/precioTot"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/atras"
        android:id="@+id/volver"/>

</LinearLayout>
