<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_cebanc_pizza__cliente"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.aitor.cebancpizza.CebancPizza_Cliente"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@android:color/black">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logosecundario"/>

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/nombre"
        android:inputType="textPersonName"
        android:id="@+id/nombre"
        android:background="@android:color/white"
        android:textColor="@android:color/black"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:hint="@string/direccion"
        android:inputType="text"
        android:id="@+id/direccion"
        android:background="@android:color/white"
        android:textColor="@android:color/black"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:hint="@string/telefono"
        android:inputType="number"
        android:maxLength="9"
        android:id="@+id/tlf"
        android:background="@android:color/white"
        android:textColor="@android:color/black"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:text="TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pru"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/siguiente"
            android:id="@+id/siguientePantalla1"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/salir"
            android:id="@+id/salirPantalla1"/>

    </LinearLayout>

</LinearLayout>
