<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ListView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/list" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:stretchColumns="*">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <Button
                        android:text="@string/modificar"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/btnModificar" />

                    <Button
                        android:text="@string/anadir"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/btnAnadir" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <Button
                        android:text="@string/borrar"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/btnBorrar" />

                    <Button
                        android:text="@string/salir"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/btnSalir" />
                </TableRow>

            </TableLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>